minio-tenant-0/k8s/ingress-route-tenant-0-console.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: console-tenant-0
  namespace: tenant-0
spec:
  entryPoints:
    - websecure
  tls: 
    secretName: ingress-cert-env0-minio-tenant-0-console
  routes:
    - match: Host(`console.tenant0.minio.env0.luojm.com`) 
      kind: Rule
      services:
      - name: tenant-0-console
        kind: Service
        namespace: tenant-0
        port: 9090
