minio-tenant-0/k8s/ingress-route-tenant-0.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tenant-0
  namespace: tenant-0
spec:
  entryPoints:
    - web
    - websecure
  tls: 
    secretName: ingress-cert-env0-minio-tenant-0
  routes:
    - match: Host(`tenant0.minio.env0.luojm.com`) 
      kind: Rule
      services:
      - name: tenant-0-hl
        kind: Service
        namespace: tenant-0
        port: 9000
